# rust-for-iot

./: LICENSE.txt  README.md  errata.md
ch01/extra/: Cargo.toml  README.md
ch01/extra/src/: asyn.rs  complex_moves.rs  main.rs  ownership.rs  refs.rs  slices.rs  strings.rs  traits.rs  variables.rs
deploy/: README.md  emqtt_values.yaml  eventstore_values.yaml
deploy/iot/: Chart.yaml  values.yaml
deploy/iot/templates/: _helpers.tpl  ingress.yaml  mqtt_deployment.yaml  retrieval_deployment.yaml  retrieval_rpc_deployment.yaml  secret.yaml  service.yaml  upload_ss.yaml
mqtt_service/: .dockerignore  Cargo.lock.bak  Cargo.toml  Dockerfile  README.md  build.rs  health.json
mqtt_service/schema/: command.capnp  message.capnp
mqtt_service/src/: file.rs  http.rs  main.rs  parser.rs  rpc.rs
mqtt_service/src/actions/: command.rs  config.rs  health.rs  health_bytes.rs  mod.rs  recording.rs
mqtt_service/src/args/: client_crt.rs  client_key.rs  http_port.rs  http_server.rs  mod.rs  port.rs  rootca.rs  rpc_port.rs  rpc_server.rs  server.rs
mqtt_service/src/mqtt/: client.rs  middleware.rs  mod.rs
pi-helper/: README.md  build_opencv.sh  commands.txt  runApp.sh  runMq.sh
rasp-auth/: Cargo.toml  Dockerfile
rasp-auth/src/: lib.rs
rasp-pi-app-master/: Cargo.lock.bak  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ubuntu  README.md  gexiv2.txt  opencv.pc
rasp-pi-app-master/src/: daily.rs  errors.rs  file.rs  homekit.rs  joystick.rs  main.rs  manager.rs
rasp-pi-app-master/src/args/: auth0.rs  auth_client_id.rs  auth_client_secret.rs  backend.rs  mod.rs
rasp-pi-app-master/src/camera/: db.rs  mod.rs  send.rs  video.rs
rasp-pi-app-master/src/led/: mod.rs  screen.rs
rasp-pi-app-master/src/sensors/: atmospheric.rs  mod.rs
rasp-pi-mq/: Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs
rasp-pi-mq/schema/: message.capnp
rasp-pi-mq/src/: errors.rs  file.rs  heartbeat.rs  ipc.rs  main.rs
rasp-pi-mq/src/actions/: mod.rs  recording.rs
rasp-pi-mq/src/args/: client_crt.rs  client_key.rs  mod.rs  port.rs  rootca.rs  server.rs
rasp-pi-mq/src/mqtt/: client.rs  mod.rs  processor.rs
retrieval_svc/: .env  Cargo.lock.bak  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml
retrieval_svc/migrations/00000000000000_diesel_initial_setup/: up.sql
retrieval_svc/migrations/2019-04-02-051746_create_media_datas/: down.sql  up.sql
retrieval_svc/migrations/2019-04-07-052754_comment/: up.sql
retrieval_svc/migrations/2019-06-15-201522_video_metadata/: down.sql  up.sql
retrieval_svc/migrations/2019-06-15-201528_image_metadata/: down.sql  up.sql
retrieval_svc/migrations/2019-07-28-004137_health_check/: down.sql  up.sql
retrieval_svc/schema/: message.capnp
retrieval_svc/src/: authorization.rs  cqrs.rs  domain.rs  errors.rs  http.rs  main.rs  rpc.rs
retrieval_svc/src/actions/: comment.rs  media_data.rs  mod.rs
retrieval_svc/src/args/: auth.rs  database.rs  event_store_host.rs  event_store_pass.rs  event_store_port.rs  event_store_user.rs  event_store_web_port.rs  mod.rs  port.rs  rpc.rs  server.rs
retrieval_svc/src/database/: mod.rs  schema.rs
retrieval_svc/src/graphql/: context.rs  mod.rs  schema.rs
retrieval_svc/src/models/: comment.rs  health_check.rs  media_data.rs  metadata.rs  mod.rs
upload_svc/: Cargo.toml  Dockerfile  README.md
upload_svc/kubes/: basic_deploy.yaml  deployment.yaml  deployment_with_env.yaml  ingress.yaml  pvc.yaml  service-custerip.yaml  service-nodeport.yaml  statefulset.yaml
upload_svc/src/: errors.rs  http.rs  main.rs
upload_svc/src/actions/: download.rs  mod.rs  upload.rs
upload_svc/src/args/: mod.rs  port.rs  retrieval_url.rs  server.rs
upload_svc/src/parsers/: image.rs  mod.rs  video.rs
