[package]
name = "rasp-app"
version = "0.1.0"
authors = ["Joseph Nusairat <joseph@nusairat.com>"]
edition = "2018"

[features]
full=[]
ch09 = []
ch10 = ["ch09"]

# I think default will included lal these as well.
#default = ["full"]

[dependencies]
# For use for our timing
# tag::tokio[]
tokio = { version = "0.2.4", features =["full"] }
tokio-timer = "0.2.12"
## Locked due to a macros future error
futures = "=0.3.2"
# end::tokio[]

# Misc]
log = "0.4.5"
pretty_env_logger = "0.3"

# For error chaining
error-chain = "0.12.0"

# Used for Argument Matching And Applications
clap = "2.32.0"

# Raspberry Pi Interaction
rust_gpiozero = "0.1.0"

# Sense HAT interaction crates
# tag::screen[]
sensehat-screen = { version = "0.2", default-features = false, features = ["fonts", "linux-framebuffer", "scroll"] }
# end::screen[]

# tag::hat[]
sensehat = { version = "1.1.1", default-features = false, features = ["humidity"], git = "https://github.com/nusairat/sensehat-rs.git", branch = "chore/fix-retrieve-error"}
# end::hat[]

# tag::stick[]
sensehat-stick = { version = "0.1", default-features = false, features = ["linux-evdev"], git = "https://github.com/nusairat/sensehat-stick-rs.git" }
# end::stick[]

# Authorization
# authentication = { version = "0.1.0", path = "/rasp-auth" }
# Might protect this later?
authentication = { version = "0.1.0", git = "https://gitlab.com/nusairat/rasp-pi-auth.git" }
#yup-oauth2 = "3.1.0"
#yup-oauth2 = { git = "https://github.com/nusairat/yup-oauth2.git", branch="chore/fix-merge-errors" }
yup-oauth2 = { git = "https://github.com/nusairat/yup-oauth2.git" }
chrono = "0.4.10"

# For the Camera
#opencv = {  version = "0.29", default-features = false, features = ["opencv-4", "buildtime-bindgen"] }

# Homekit
# tag::hap[]
hap = "0.0.10"
# end::hap[]

# For our IPC communication
# tag::ipc[]
packet-ipc = "0.9.0"
# end::ipc[]

# tag::upload[]
# Database Items
rusqlite = "0.23.1"
# this version is needed to qork for rusqlite
time = "0.1.38"

# Used for sending the file to our sever
reqwest = { version = "0.10.4", features = ["blocking", "stream"] }
## Needed for linux bindings
openssl-sys = "0.9.54"
# Due to macro errors
futures-util = "=0.3.2"
futures-macro = "=0.3.2"
# end::upload[]

uuid = { version =  "^0.7.x", features = ["v4", "serde"] }

# tag::opencv[]
# For writing out EXIF data
#rexiv2 = "0.9.0"

[dependencies.opencv]
version = "0.29"
default-features = false
features = [
    "opencv-4",
    "buildtime-bindgen",
]
# end::opencv[]

[patch.crates-io]
hap = { git = "https://github.com/nusairat/hap-rs", branch = "chore/upgrade-ring"}
