[package]
name = "rasp-pi-mq"
version = "0.1.0"
authors = ["Joseph Nusairat <jnusairat@tesla.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
capnpc = "0.12.1"

[dependencies]
# Tokio
tokio = { version = "0.2.13", features =["full"] }
tokio-timer = "0.2.13"
futures = "0.3"

# CAPNPN
capnp = "0.12.1"
uuid = { version =  "^0.8.1", features = ["v4", "serde"] }

# Serde for our Json going back and forth
serde = { version =  "1.0.105", features = ["derive"] }
serde_json = "1.0.50"

# MQTT
lazy_static = "1.2.0"
rumqtt = { version =  "^0.31", features = ["chrono"] }

# Misc
# tag::basic[]
log = "0.4.5"
pretty_env_logger = "0.4.0"
error-chain = "0.12.2"
clap = "2.32.0"
# To find relative directory
shellexpand = "1.1.1"
# end::basic[]

# For our IPC communication
packet-ipc = "0.9.0"
